--- a/package.json
+++ b/package.json
@@ -21,20 +21,23 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.13",
-    "@nestjs/core": "^7.6.13",
+    "@nestjs/common": "^8.2.6",
+    "@nestjs/core": "^8.2.6",
     "@nestjs/mapped-types": "^1.0.1",
-    "@nestjs/platform-express": "^7.6.13",
+    "@nestjs/platform-express": "^8.2.6",
+    "@nestjs/typeorm": "^8.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6"
+    "rxjs": "^7.5.4",
+    "typeorm": "^0.2.41"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.6",
+    "@nestjs/cli": "^8.2.0",
     "@nestjs/schematics": "^7.2.7",
-    "@nestjs/testing": "^7.6.13",
+    "@nestjs/testing": "^8.2.6",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
