--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^8.2.6",
+    "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.2.6",
     "@nestjs/mapped-types": "^1.0.1",
     "@nestjs/platform-express": "^8.2.6",
@@ -36,9 +38,10 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.0",
-    "@nestjs/schematics": "^7.2.7",
+    "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.2.6",
     "@types/express": "^4.17.11",
+    "@types/hapi__joi": "^17.1.8",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
     "@types/supertest": "^2.0.10",
